# typescript/src/apis/DatasetsApi.ts
@@ -21,6 +21,7 @@ import type {
   Dataset,
   DatasetListing,
   ErrorResponse,
+  MetaDataDefinition,
   MetaDataSuggestion,
   OrderBy,
   Volume,
@@ -38,6 +39,8 @@ import {
     DatasetListingToJSON,
     ErrorResponseFromJSON,
     ErrorResponseToJSON,
+    MetaDataDefinitionFromJSON,
+    MetaDataDefinitionToJSON,
     MetaDataSuggestionFromJSON,
     MetaDataSuggestionToJSON,
     OrderByFromJSON,
@@ -59,6 +62,10 @@ export interface DeleteDatasetHandlerRequest {
 }
 
 export interface GetDatasetHandlerRequest {
+    dataset: string;
+}
+
+export interface GetLoadingInfoHandlerRequest {
     dataset: string;
 }
 
@@ -243,6 +250,46 @@ export class DatasetsApi extends runtime.BaseAPI {
      */
     async getDatasetHandler(requestParameters: GetDatasetHandlerRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<Dataset> {
         const response = await this.getDatasetHandlerRaw(requestParameters, initOverrides);
+        return await response.value();
+    }
+
+    /**
+     * Retrieves the loading information of a dataset
+     * Retrieves the loading information of a dataset
+     */
+    async getLoadingInfoHandlerRaw(requestParameters: GetLoadingInfoHandlerRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<MetaDataDefinition>> {
+        if (requestParameters.dataset === null || requestParameters.dataset === undefined) {
+            throw new runtime.RequiredError('dataset','Required parameter requestParameters.dataset was null or undefined when calling getLoadingInfoHandler.');
+        }
+
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        if (this.configuration && this.configuration.accessToken) {
+            const token = this.configuration.accessToken;
+            const tokenString = await token("session_token", []);
+
+            if (tokenString) {
+                headerParameters["Authorization"] = `Bearer ${tokenString}`;
+            }
+        }
+        const response = await this.request({
+            path: `/dataset/{dataset}/loadingInfo`.replace(`{${"dataset"}}`, encodeURIComponent(String(requestParameters.dataset))),
+            method: 'GET',
+            headers: headerParameters,
+            query: queryParameters,
+        }, initOverrides);
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => MetaDataDefinitionFromJSON(jsonValue));
+    }
+
+    /**
+     * Retrieves the loading information of a dataset
+     * Retrieves the loading information of a dataset
+     */
+    async getLoadingInfoHandler(requestParameters: GetLoadingInfoHandlerRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<MetaDataDefinition> {
+        const response = await this.getLoadingInfoHandlerRaw(requestParameters, initOverrides);
         return await response.value();
     }
 
